--- a/b4.html
+++ b/b4.html
@@ -27,9 +27,9 @@
             <div id="banner-left">UNIVERSAL BLOG</div>
             <div id="banner-right-social">
             <ul> 
-         <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&sqi=2&ved=0ahUKEwjb-pWo_LLSAhXGvI8KHY_aClAQFgggMAA&url=https%3A%2F%2Fwww.facebook.com%2Flogin%2F&usg=AFQjCNFfQ1VFQ6oCtlx3VtDcdcNkOc3RpQ&sig2=Vv7e4-yJbb1FJd_i2J8mEg&bvm=bv.148073327,d.c2I"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\facebook.png" height="35px" width="35px"></a></li>
-       <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjV1pHL_LLSAhWJr48KHcU7BPwQFggZMAA&url=https%3A%2F%2Fwww.instagram.com%2F%3Fhl%3Den&usg=AFQjCNHmNCkW5EuG9ytIm-TamoZwV695Ag&sig2=JbwNFnps1unzV4fOM7Smlw"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\instagram1.png" height=30px width="30px"></a></li>
-      <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3orDg_LLSAhWBLo8KHQNzD3QQFggZMAA&url=https%3A%2F%2Ftwitter.com%2Flogin&usg=AFQjCNG9e0f73HbmRlF-mvwClJKO_kfSow&sig2=zne28Rq0418HTo_8k_aJLQ"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\twitter.png" height="30px" width="30px"></a></li>
+         <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&sqi=2&ved=0ahUKEwjb-pWo_LLSAhXGvI8KHY_aClAQFgggMAA&url=https%3A%2F%2Fwww.facebook.com%2Flogin%2F&usg=AFQjCNFfQ1VFQ6oCtlx3VtDcdcNkOc3RpQ&sig2=Vv7e4-yJbb1FJd_i2J8mEg&bvm=bv.148073327,d.c2I"><img src="image\facebook.png" height="35px" width="35px"></a></li>
+       <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjV1pHL_LLSAhWJr48KHcU7BPwQFggZMAA&url=https%3A%2F%2Fwww.instagram.com%2F%3Fhl%3Den&usg=AFQjCNHmNCkW5EuG9ytIm-TamoZwV695Ag&sig2=JbwNFnps1unzV4fOM7Smlw"><img src="image\instagram1.png" height=30px width="30px"></a></li>
+      <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3orDg_LLSAhWBLo8KHQNzD3QQFggZMAA&url=https%3A%2F%2Ftwitter.com%2Flogin&usg=AFQjCNG9e0f73HbmRlF-mvwClJKO_kfSow&sig2=zne28Rq0418HTo_8k_aJLQ"><img src="image\twitter.png" height="30px" width="30px"></a></li>
         	</ul>
             </div>
         </div>
@@ -49,9 +49,9 @@
         	</div>
           <div id="slider">
           <div class="w3-content w3-display-container" style="max-width:800px">
-  <img class="mySlides" src="C:\Images\3d-landscape-with-bridge.jpg" style="width:1078px; height: 500px;">
-  <img class="mySlides" src="C:\Images\150123.jpg" style="width:1078px; height: 500px;">
-  <img class="mySlides" src="C:\Images\518176.jpg" style="width:1078px; height: 500px;">
+  <img class="mySlides" src="image\3d-landscape-with-bridge.jpg" style="width:1078px; height: 500px;">
+  <img class="mySlides" src="image\150123.jpg" style="width:1078px; height: 500px;">
+  <img class="mySlides" src="image\518176.jpg" style="width:1078px; height: 500px;">
     <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-display-right" onclick="plusDivs(1)">&#10095;</button>
   <!--<div class="dotcenter" style="width:100%; text-align:center">
@@ -144,27 +144,27 @@ Unlike solar panels, the material keeps working even when the sun sets, with no 
           <div class="latest_post_container">
             <ul class="latest_postnav">
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 1</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 2</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 3</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 4</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 2</a> </div>
                 </div>
               </li>
@@ -179,27 +179,27 @@ Unlike solar panels, the material keeps working even when the sun sets, with no 
           <div class="latest_post_container">
             <ul class="latest_postnav">
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 1</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 2</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 3</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 4</a> </div>
                 </div>
               </li>
               <li>
-                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="80px"> </a>
+                <div class="media"> <a href="pages/single_page.html" class="media-left"> <img alt="" src="image\readmore.jpg" height="80px"> </a>
                   <div class="media-body"> <a href="pages/single_page.html" class="catg_title"> Aliquam malesuada diam eget turpis varius 2</a> </div>
                 </div>
               </li>
