--- a/local.html
+++ b/local.html
@@ -24,9 +24,9 @@
             <div id="banner-left">UNIVERSAL BLOG</div>
             <div id="banner-right-social">
             <ul> 
-         <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&sqi=2&ved=0ahUKEwjb-pWo_LLSAhXGvI8KHY_aClAQFgggMAA&url=https%3A%2F%2Fwww.facebook.com%2Flogin%2F&usg=AFQjCNFfQ1VFQ6oCtlx3VtDcdcNkOc3RpQ&sig2=Vv7e4-yJbb1FJd_i2J8mEg&bvm=bv.148073327,d.c2I"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\facebook.png" height="35px" width="35px"></a></li>
-       <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjV1pHL_LLSAhWJr48KHcU7BPwQFggZMAA&url=https%3A%2F%2Fwww.instagram.com%2F%3Fhl%3Den&usg=AFQjCNHmNCkW5EuG9ytIm-TamoZwV695Ag&sig2=JbwNFnps1unzV4fOM7Smlw"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\instagram1.png" height=30px width="30px"></a></li>
-      <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3orDg_LLSAhWBLo8KHQNzD3QQFggZMAA&url=https%3A%2F%2Ftwitter.com%2Flogin&usg=AFQjCNG9e0f73HbmRlF-mvwClJKO_kfSow&sig2=zne28Rq0418HTo_8k_aJLQ"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\twitter.png" height="30px" width="30px"></a></li>
+         <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&sqi=2&ved=0ahUKEwjb-pWo_LLSAhXGvI8KHY_aClAQFgggMAA&url=https%3A%2F%2Fwww.facebook.com%2Flogin%2F&usg=AFQjCNFfQ1VFQ6oCtlx3VtDcdcNkOc3RpQ&sig2=Vv7e4-yJbb1FJd_i2J8mEg&bvm=bv.148073327,d.c2I"><img src="image\facebook.png" height="35px" width="35px"></a></li>
+       <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjV1pHL_LLSAhWJr48KHcU7BPwQFggZMAA&url=https%3A%2F%2Fwww.instagram.com%2F%3Fhl%3Den&usg=AFQjCNHmNCkW5EuG9ytIm-TamoZwV695Ag&sig2=JbwNFnps1unzV4fOM7Smlw"><img src="image\instagram1.png" height=30px width="30px"></a></li>
+      <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3orDg_LLSAhWBLo8KHQNzD3QQFggZMAA&url=https%3A%2F%2Ftwitter.com%2Flogin&usg=AFQjCNG9e0f73HbmRlF-mvwClJKO_kfSow&sig2=zne28Rq0418HTo_8k_aJLQ"><img src="image\twitter.png" height="30px" width="30px"></a></li>
         	</ul>
             </div>
         </div>
@@ -37,9 +37,9 @@
             <nav class="menu">
            <ul>
               <li><a href="b4.html">Home</a></li>
-              <li><a href="#">About Us</a></li>
+              <li><a href="aboutus.html">About Us</a></li>
               <li><a href="login1.html">Login</a></li>
-              <li><a href="#">Local Post</a></li>
+              <li><a href="local.html">Local Post</a></li>
               <li><a href="contactme.html">Contact Us</a></li>
             </ul>  	
         	</nav>
@@ -49,7 +49,7 @@
                  
                     <h1>Tweaked DNA Snippets Could Become Tiny Electrical 'On' Switches</h1>
                     <div>
-                       <img src="C:\Users\Satyam Yadav\Desktop\blog\image\dna.jpg" width="100%" height="45%">
+                       <img src="image\dna.jpg" width="100%" height="45%">
                     </div>
                     <P>
                    Teensy "living" circuits based on DNA could lead to new ways for scientists to look inside cells and even see chemical reactions such as photosynthesis. However, to create such DNA devices, there has to be a way to run electricity through them. Until now, that has been a limiting factor.
@@ -57,13 +57,13 @@
 But now, scientists have turned tiny snippets of DNA into molecular "on" switches that get electricity flowing on a miniscule scale. The molecular switches act on a scale 1,000 times smaller than a strand of hair, meaning they could be used to create tiny, cheap molecular devices, the researchers report in a new study.
 
 The secret to creating these biological electrical switches was tweaking the letters that make up the genetic code.
-                    <a href="#"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="20px" width="40px"></a>
+                    <a href="#"><img src="image\readmore.jpg" height="20px" width="40px"></a>
                     </P>
                 </article>  
                 <article>
                     <h1>Energy-Free AC? Heat-Reflecting Wrap Could Cool Without Power</h1>
           `           <div>
-                       <img src="C:\Users\Satyam Yadav\Desktop\blog\image\nature_mountains_sky_lake_clouds_81150_1280x720.jpg" width="100%" height="45%">
+                       <img src="image\nature_mountains_sky_lake_clouds_81150_1280x720.jpg" width="100%" height="45%">
                     </div>
                     <P>
                     A heat-reflecting, futuristic supermaterial that looks like a roll of plastic wrap could one day cool both houses and power plants without using any energy, according to a new study.
@@ -71,7 +71,7 @@ The secret to creating these biological electrical switches was tweaking the let
 Unlike solar panels, the material keeps working even when the sun sets, with no additional electricity. And the plastic wrap is made up of cheap, simple-to-produce materials that could be easily mass-produced on rolls.
 
 "We feel that this low-cost manufacturing process will be transformative for real-world applications," Xiaobo Yin, a mechanical engineer and materials scientist at the University of Colorado Boulder, said in a statement.
-                    <a href="#"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\readmore.jpg" height="20px" width="40px"></a>
+                    <a href="#"><img src="image\readmore.jpg" height="20px" width="40px"></a>
                     </P>
                 </article>     
           </div>
