--- a/login1.html
+++ b/login1.html
@@ -22,9 +22,9 @@
             <div id="banner-left">UNIVERSAL BLOG</div>
             <div id="banner-right-social">
             <ul> 
-        <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&sqi=2&ved=0ahUKEwjb-pWo_LLSAhXGvI8KHY_aClAQFgggMAA&url=https%3A%2F%2Fwww.facebook.com%2Flogin%2F&usg=AFQjCNFfQ1VFQ6oCtlx3VtDcdcNkOc3RpQ&sig2=Vv7e4-yJbb1FJd_i2J8mEg&bvm=bv.148073327,d.c2I"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\facebook.png" height="35px" width="35px"></a></li>
-      <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjV1pHL_LLSAhWJr48KHcU7BPwQFggZMAA&url=https%3A%2F%2Fwww.instagram.com%2F%3Fhl%3Den&usg=AFQjCNHmNCkW5EuG9ytIm-TamoZwV695Ag&sig2=JbwNFnps1unzV4fOM7Smlw"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\instagram1.png" height="30px" width="30px"></a></li>
-     <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3orDg_LLSAhWBLo8KHQNzD3QQFggZMAA&url=https%3A%2F%2Ftwitter.com%2Flogin&usg=AFQjCNG9e0f73HbmRlF-mvwClJKO_kfSow&sig2=zne28Rq0418HTo_8k_aJLQ"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\twitter.png" height="30px" width="30px"></a></li>
+        <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&sqi=2&ved=0ahUKEwjb-pWo_LLSAhXGvI8KHY_aClAQFgggMAA&url=https%3A%2F%2Fwww.facebook.com%2Flogin%2F&usg=AFQjCNFfQ1VFQ6oCtlx3VtDcdcNkOc3RpQ&sig2=Vv7e4-yJbb1FJd_i2J8mEg&bvm=bv.148073327,d.c2I"><img src="image\facebook.png" height="35px" width="35px"></a></li>
+      <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjV1pHL_LLSAhWJr48KHcU7BPwQFggZMAA&url=https%3A%2F%2Fwww.instagram.com%2F%3Fhl%3Den&usg=AFQjCNHmNCkW5EuG9ytIm-TamoZwV695Ag&sig2=JbwNFnps1unzV4fOM7Smlw"><img src="image\instagram1.png" height="30px" width="30px"></a></li>
+     <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3orDg_LLSAhWBLo8KHQNzD3QQFggZMAA&url=https%3A%2F%2Ftwitter.com%2Flogin&usg=AFQjCNG9e0f73HbmRlF-mvwClJKO_kfSow&sig2=zne28Rq0418HTo_8k_aJLQ"><img src="image\twitter.png" height="30px" width="30px"></a></li>
         	</ul>
             </div>
             </div>
@@ -152,7 +152,7 @@
  
  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-    <script src="C:\Users\Satyam Yadav\Desktop\HTML\sign-up-login-form\js\index.js"></script>
+    <script src="sign-up-login-form\js\index.js"></script>
 
 <footer id="footer">
     <div class="footer_top">
