--- a/b4.html
+++ b/b4.html
@@ -42,7 +42,7 @@
               <li><a href="b4.html">Home</a></li>
               <li><a href="aboutus.html">About Us</a></li>
               <li><a href="login1.html">Login</a></li>
-              <li><a href="local.html">Local Post</a></li>
+              <li><a href="f2.html">Local Post</a></li>
               <li><a href="contactme.html">Contact Us</a></li>
             </ul>  	
         	</nav>
