--- a/f2.html
+++ b/f2.html
@@ -24,9 +24,9 @@
             <div id="banner-left">UNIVERSAL BLOG</div>
             <div id="banner-right-social">
             <ul> 
-         <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&sqi=2&ved=0ahUKEwjb-pWo_LLSAhXGvI8KHY_aClAQFgggMAA&url=https%3A%2F%2Fwww.facebook.com%2Flogin%2F&usg=AFQjCNFfQ1VFQ6oCtlx3VtDcdcNkOc3RpQ&sig2=Vv7e4-yJbb1FJd_i2J8mEg&bvm=bv.148073327,d.c2I"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\facebook.png" height="35px" width="35px"></a></li>
-       <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjV1pHL_LLSAhWJr48KHcU7BPwQFggZMAA&url=https%3A%2F%2Fwww.instagram.com%2F%3Fhl%3Den&usg=AFQjCNHmNCkW5EuG9ytIm-TamoZwV695Ag&sig2=JbwNFnps1unzV4fOM7Smlw"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\instagram1.png" height=30px width="30px"></a></li>
-      <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3orDg_LLSAhWBLo8KHQNzD3QQFggZMAA&url=https%3A%2F%2Ftwitter.com%2Flogin&usg=AFQjCNG9e0f73HbmRlF-mvwClJKO_kfSow&sig2=zne28Rq0418HTo_8k_aJLQ"><img src="C:\Users\Satyam Yadav\Desktop\blog\image\twitter.png" height="30px" width="30px"></a></li>
+         <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&sqi=2&ved=0ahUKEwjb-pWo_LLSAhXGvI8KHY_aClAQFgggMAA&url=https%3A%2F%2Fwww.facebook.com%2Flogin%2F&usg=AFQjCNFfQ1VFQ6oCtlx3VtDcdcNkOc3RpQ&sig2=Vv7e4-yJbb1FJd_i2J8mEg&bvm=bv.148073327,d.c2I"><img src="image\facebook.png" height="35px" width="35px"></a></li>
+       <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjV1pHL_LLSAhWJr48KHcU7BPwQFggZMAA&url=https%3A%2F%2Fwww.instagram.com%2F%3Fhl%3Den&usg=AFQjCNHmNCkW5EuG9ytIm-TamoZwV695Ag&sig2=JbwNFnps1unzV4fOM7Smlw"><img src="image\instagram1.png" height=30px width="30px"></a></li>
+      <li><a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3orDg_LLSAhWBLo8KHQNzD3QQFggZMAA&url=https%3A%2F%2Ftwitter.com%2Flogin&usg=AFQjCNG9e0f73HbmRlF-mvwClJKO_kfSow&sig2=zne28Rq0418HTo_8k_aJLQ"><img src="image\twitter.png" height="30px" width="30px"></a></li>
         	</ul>
             </div>
         </div>
@@ -49,7 +49,7 @@
                  
                     <h1>Stop Malware Attacks and Online Identity Theft</h1>
                     <div>
-                       <img src="C:\Users\Satyam Yadav\Desktop\blog\image\malware.jpg" width="100%" height="550px">
+                       <img src="image\malware.jpg" width="100%" height="550px">
                     </div>
                     <P>
                    This is mostly done to steal the identity of any authorized user, rob confidential data, degrade performance, spy on a device, disrupt a service, and/or disable the targeted network or system for the sole purpose of misusing data or exploiting resources. Acting as purposely malignant, malware is disguised as an authentic application available from an apparently trustworthy source.
@@ -60,7 +60,7 @@ While no solo technique is 100% infallible, a few tested and trustworthy cyber s
                 <article>
                     <h1>How does the Internet connect between continents?</h1>
           `           <div>
-                       <img src="C:\Users\Satyam Yadav\Desktop\blog\image\int.jpg" width="100%" height="550px">
+                       <img src="image\int.jpg" width="100%" height="550px">
                     </div>
                     <P>
                     How is the Internet shared between continents?  Answer: Via submarine communications transatlantic cable, a cable laid on the sea bed between land-based stations to carry telecommunication signals across stretches of ocean.  The cable is used for various sorts of telecom traffic, including the Internet.  Satellites orbiting the planet also help to supplement communications, relaying signals over long distances or as backup in the event of communications failure.  Cable is preferred over satellite due to the much lower latency and higher bandwidth it achieves.
@@ -71,7 +71,7 @@ The first communications occurred August 16, 1858, reducing the communication ti
                      <article>
                     <h1>Method to predict surface ozone pollution levels provides 48-hour heads-up</h1>
           `           <div>
-                       <img src="C:\Users\Satyam Yadav\Desktop\blog\image\pol.jpg" width="100%" height="550px">
+                       <img src="image\pol.jpg" width="100%" height="550px">
                     </div>
                     <P>
                     The method, called regression in self-organizing map (REGiS), weighs and combines statistical air quality models by pairing them with predicted weather patterns to create probabilistic ozone forecasts. Unlike current chemical transport models, REGiS can predict ozone levels up to 48 hours in advance without requiring significant computational power.
