--- a/contactme.html
+++ b/contactme.html
@@ -51,9 +51,9 @@
             <h2>Contact Us</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dosectetur adipisicing elit, sed do.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <form action="post" class="contact_form" action="contact_connect.php>
-              <input class="form-control" type="text" placeholder="Name*" size="50"><br>
-              <input class="form-control" type="email" placeholder="Email*" size="50"><br>
-              <textarea class="form-control" cols="32" rows="10" placeholder="Message*"></textarea><br>
+             Name: <input class="form-control" type="text" placeholder="Name*" size="50"><br>
+             Email: <input class="form-control" type="email" placeholder="Email*" size="50"><br>
+             Message: <textarea class="form-control" cols="32" rows="10" placeholder="Message*"></textarea><br>
               <input type="submit" value="Send Message" onClick="myfunct()">
             </form>
           </div>
