--- a/contactme.html
+++ b/contactme.html
@@ -54,7 +54,7 @@
              <input class="form-control" type="text" name="Name" size="50"><br>
              <input class="form-control" type="email" name="Email" size="50"><br>
              <textarea class="form-control" cols="32" rows="10" name="message"></textarea><br>
-              <input type="submit" value="Send Message" onClick="myfunct()">
+              <input type="submit" value="Send Message">
             </form>
           </div>
         </div>
